scenarios/hardened/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-security-hardened
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
