scenarios/hardened/authorized-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: authorized-client
  namespace: k8s-security-hardened
  labels:
    role: test-client
    access: authorized
spec:
  automountServiceAccountToken: false

  securityContext:
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: curl
      image: curlimages/curl:8.16.0

      command:
        - sleep
        - "3600"

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
