scenarios/hardened/unauthorized-client.yaml
apiVersion: v1
kind: Pod

metadata:
  name: unauthorized-client
  namespace: k8s-security-hardened
  labels:
    role: test-client
    access: unauthorized
  annotations:
    checkov.io/skip1: "CKV_K8S_8=Diagnostic test Pod; liveness probe is not applicable"
    checkov.io/skip2: "CKV_K8S_9=Diagnostic test Pod; readiness probe is not applicable"

spec:
  automountServiceAccountToken: false

  securityContext:
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: curl
      image: curlimages/curl@sha256:463eaf6072688fe96ac64fa623fe73e1dbe25d8ad6c34404a669ad3ce1f104b6
      imagePullPolicy: Always

      command:
        - sleep
        - "3600"

      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 50m
          memory: 32Mi

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
