scenarios/hardened/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-security-lab-hardened
  namespace: k8s-security-hardened
spec:
  selector:
    app: k8s-security-lab
    profile: hardened
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
