scenarios/hardened/networkpolicy-allow-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-authorized-clients
  namespace: k8s-security-hardened
spec:
  podSelector:
    matchLabels:
      app: k8s-security-lab
      profile: hardened

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: authorized
      ports:
        - protocol: TCP
          port: 5000
