scenarios/hardened/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: k8s-security-hardened
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
