scenarios/hardened/networkpolicy-test-client-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-test-client-egress
  namespace: k8s-security-hardened

spec:
  podSelector:
    matchLabels:
      role: test-client

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: k8s-security-lab
              profile: hardened
      ports:
        - protocol: TCP
          port: 5000

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
